--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -2,6 +2,9 @@
 import {Markdown} from 'astro/components'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '$components/Title'
+import Image from '$components/Image'
+
+import sponsors from '@data/sponsors.json'
 ---
 
 <BaseLayout title="Donate">
@@ -10,7 +13,13 @@ import Title from '$components/Title'
 			<div class="content-container">
 				<Title title="Donate" subtitle="Here" classes="text-center"/>
 				<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
-					<img class="rounded mx-auto p-2 h-26 bg-[#f4efdf] border-accent-color border-2" src="https://ik.imagekit.io/thegoldendino/hfw/sponsors/shunpike_IPvJZWnb8w.gif?updatedAt=1628178274416" alt="Shunpike The Business of Art"/>
+					<Image 
+						className="rounded mx-auto p-2 h-26 bg-[#f4efdf] border-accent-color border-2" 
+						src={sponsors.shunpike.image} 
+						alt={sponsors.shunpike.name}
+						width="266"
+						height="100"
+					/>
 				</a>
 			</div>
 		</div>
