--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -3,8 +3,10 @@ import {Markdown} from 'astro/components'
 import YAML from 'yaml'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '$components/Title.astro'
+import Image from '$components/Image.astro'
 
 import positions from '@data/volunteer-positions.json'
+import committee from '@data/committee.json'
 ---
 
 <BaseLayout title="Volunteer">
@@ -12,7 +14,13 @@ import positions from '@data/volunteer-positions.json'
 		<div class="w-full md:w-1/3 md:pr-3 mb-3">
 			<div class="content-container">
 				<Title title="Sign Up" classes="text-center" />
-				<img class="w-2/3 mx-auto my-4 border-8 border-accent-color rounded border-opacity-60" src="https://ik.imagekit.io/thegoldendino/hfw/people/katie_OjdCeHQls.jpeg?updatedAt=1628536067049" alt="Katie our Volunteer Coordinator"/>
+				<Image 
+					className="w-2/3 mx-auto my-4 border-8 border-accent-color rounded border-opacity-60" 
+					src={committee["Volunteer Coordinator"].image_url} 
+					alt="Katie our Volunteer Coordinator"
+					width="239"
+					height="239"
+				/>
 				<p class="content">
 					<Markdown>
 						Katie our HONK! Fest West Volunteer Coordinator would LOVE to hear from you!
