Styling | fix random styling artifacts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,14 +23,14 @@ const golden_dino = true;
               alt={ sponsors.neighborhoods.name }
               width="113.375"
               height="48"
-              className="mx-auto block rounded p-2 h-12 sm:h-16 bg-white"
+              className="mx-auto block rounded p-2 h-16 bg-white"
             />
           </a>
           <a class="block mb-3 mx-2" href="{ sponsors.kuow.link }" rel="noopener">
             <Image
               src={ sponsors.kuow.image }
               alt={ sponsors.kuow.name }
-              className="h-12 sm:h-16"
+              className="h-16"
               width="191.422"
               height="64"
               raw={true}
@@ -59,7 +59,7 @@ const golden_dino = true;
             alt={ sponsors.shunpike.name }
             width="164"
             height="48"
-            className="rounded mx-auto block p-2 h-16 sm:h-20 bg-[#f4efdf]"
+            className="rounded mx-auto block p-2 w-auto h-16 sm:h-20 bg-[#f4efdf]"
           />
         </a>
         <p class="text-center text-xs sm:text-sm text-main-color-800 mt-2 w-3/4">
