--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
     </Head>
   </head>
 
-  <body class="min-h-full">
+  <body class="min-h-full n">
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 	    <div class="bg-gradient-to-b from-main-color-200 to-main-color-600 opacity-60 w-full h-full fixed top-0 left-0"></div>
     </div>
 
-    <div class="w-full h-full absolute top-0 left-0">
+    <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-between">
       <!-- HEADER -->
       <header class="w-full px-6">
         <Header />
