--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -11,7 +11,7 @@ const { title = '' } = Astro.props;
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta
-	name="description="
+	name="description"
 	content="HONK! Fest West is an accessible community music festival driven by the energetic performances of street bands in public spaces."
 />
 
