--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -14,11 +14,12 @@ import sponsors from '@data/sponsors.json'
 				<Title title="Donate" subtitle="Here" classes="text-center"/>
 				<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
 					<Image 
-						className="rounded mx-auto p-2 h-26 bg-[#f4efdf] border-accent-color border-2" 
+						className="rounded mx-auto p-2 w-auto h-20 bg-[#f4efdf] border-accent-color border-2" 
 						src={sponsors.shunpike.image} 
 						alt={sponsors.shunpike.name}
-						width="266"
-						height="100"
+						width="180"
+						height="34"
+						raw={true}
 					/>
 				</a>
 			</div>
