--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -1,7 +1,7 @@
 ---
-const { src, width="auto", height="auto", alt="", className="", raw=false } = Astro.props
+const { src, width="auto", height="auto", alt="", className="", raw=false, tr="" } = Astro.props
 
-const transforms = (raw ? [`w-${width}`, `h-${height}`] : [`w-${width}`, `h-${height}`, 'f-jpg,pr-true']).join(',')
+const transforms = (raw ? [`w-${width}`, `h-${height}`, tr] : [`w-${width}`, `h-${height}`, 'f-jpg,pr-true', tr]).join(',')
 
 const imagekit_url = `${src}&tr=${transforms}`
 
