--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -3,12 +3,12 @@ const { src, width="auto", height="auto", alt="", className="", raw=false, tr=""
 
 const transforms = (raw ? [`w-${width}`, `h-${height}`, tr] : [`w-${width}`, `h-${height}`, 'f-jpg,pr-true', tr]).join(',')
 
-const imagekit_url = `${src}&tr=${transforms}`
+const image_url = `${src}&tr=${transforms}`
 
-const width_img = (<img src={imagekit_url} width={width} class={className} alt={alt}/>)
-const height_img = (<img src={imagekit_url} height={height} class={className} alt={alt}/>)
-const width_height_img = (<img src={imagekit_url} width={width} height={height} class={className} alt={alt}/>)
-const img = (<img src={imagekit_url} class={className} alt={alt}/>)
+const width_img = (<img src={image_url} width={width} class={className} alt={alt}/>)
+const height_img = (<img src={image_url} height={height} class={className} alt={alt}/>)
+const width_height_img = (<img src={image_url} width={width} height={height} class={className} alt={alt}/>)
+const img = (<img src={image_url} class={className} alt={alt}/>)
 const has_width = !!width && width.length && width !== 'auto'
 const has_height = !!height && height.length && height !== 'auto'
 
