--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -57,7 +57,8 @@ import sponsors from '@data/sponsors.json'
 					</a>
 					<span class="border-b-4 border-opacity-30 border-accent-color border-dotted w-full block mb-3"/>
 					<Markdown>
-						HONK! Fest West is supported, in part, by grant awards from [4Culture](http://www.4culture.org/), the Community Investments Fund of [Tides Foundation](http://www.tides.org/) and [King County Local Services](https://https//www.kingcounty.gov).
+						HONK! Fest West is supported, in part, by the Community Investments Fund of [Tides Foundation](http://www.tides.org/), grant awards from [4Culture](http://www.4culture.org/), 
+						 [Arts Fund](https://www.artsfund.org/), and the [Washington State Arts Commission](https://www.arts.wa.gov/).
 					</Markdown>
 					<span class="block flex flex-wrap sm:flex-nowrap justify-around mt-2 sm:mb-5">
 						{sponsors.arts.map((sponsor) => (
