--- a/src/components/BaseHead/OpenGraph.astro
+++ b/src/components/BaseHead/OpenGraph.astro
@@ -1,13 +1,9 @@
----
-const {title = ''} = Astro.props;
----
-
 <meta
 	property="og:url"
 	content="https://www.honkfestwest.org{ Astro.request.url }"
 />
 <meta property="og:type" content="website" />
-<meta property="og:title" content={ title } />
+<meta property="og:title" content="HONK! Fest West" />
 <meta
 	property="og:description"
 	content="HONK! Fest West is an accessible community music festival driven by the energetic performances of street bands in public spaces."
@@ -16,5 +12,5 @@ const {title = ''} = Astro.props;
 	property="og:image"
 	content="https://ik.imagekit.io/thegoldendino/hfw/festival/2021/honk-fest-west-2021_6fGvHoXwbRc.png?updatedAt=1628637221383&tr=w-1200,h-630,fo-auto"
 />
-<meta property="og:image:width" content="600" />
-<meta property="og:image:height" content="315" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
