Meta | Try out insights analytics

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,6 +3,7 @@ import Google from '$components/BaseHead/Google.astro'
 import MailChimp from '$components/BaseHead/MailChimp.astro'
 import OpenGraph from '$components/BaseHead/OpenGraph.astro'
 import Fonts from '$components/BaseHead/Fonts.astro'
+import Analytics from '$components/BaseHead/Analytics.astro'
 
 const { title = '' } = Astro.props;
 ---
