--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,7 +70,7 @@ import slides from '@data/slideshow.json';
 
     <!-- POST BLURBS -->
     {posts.map((post) => (
-      <article class="sm:col-span-6 content-container">
+      <article class="col-span-1 sm:col-span-6 lg:col-span-2 content-container">
         <PostBlurb post={post}/>
       </article>
     ))}
