--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -83,7 +83,7 @@ import sponsors from '@data/sponsors.json'
 		<!-- SPONSORSHIP LEVELS -->
 		<div class="w-full md:w-1/3 md:pl-3">
 			<div class="content-container">
-				<Title title="Sponsorship Levels" classes="text-center"/>
+				<Title title="Sponsorship Levels" center={true} />
 
 				<!-- GRAND MARSHALL -->
 				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
