--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -11,7 +11,7 @@ import sponsors from '@data/sponsors.json'
 	<div class="flex flex-wrap md:flex-nowrap">
 		<div class="w-full md:w-1/3 md:pr-3 mb-3">
 			<div class="content-container">
-				<Title title="Donate" subtitle="Here" classes="text-center"/>
+				<Title title="Donate" subtitle="Here" center={true} />
 				<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
 					<Image 
 						className="rounded mx-auto p-2 w-auto h-20 bg-[#f4efdf] border-accent-color border-2" 
