--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -13,7 +13,7 @@ import committee from '@data/committee.json'
 	<div class="flex flex-wrap md:flex-nowrap">
 		<div class="w-full md:w-1/3 md:pr-3 mb-3">
 			<div class="content-container">
-				<Title title="Sign Up" classes="text-center" />
+				<Title title="Sign Up" center={true} />
 				<Image 
 					className="w-2/3 mx-auto my-4 border-8 border-accent-color rounded border-opacity-60" 
 					src={committee["Volunteer Coordinator"].image_url} 
