--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -32,15 +32,15 @@ import committee from '@data/committee.json'
 	</h2>
 	<div class="flex flex-wrap justify-around mx-1 sm:-mx-3">
 		{Object.keys(committee).map((position) => (
-			<div class="content-container w-[184px] mx-1 sm:mx-3 mb-3 sm:mb-6 flex flex-col items-center">
+			<div class="content-container w-full sm:w-[184px] mx-1 sm:mx-3 mb-3 sm:mb-6 flex flex-col items-center">
 				<Image 
 					className="rounded-full h-36 mb-2" 
 					src={committee[position].image_url} alt={committee[position].name}
 					width="150"
 					height="150"
 				/>
-				<h3 class="font-emphasis text-2xl sm:text-3xl uppercase text-accent-color">{committee[position].name}</h3>
-				<p class="content text-center">{position}</p>
+				<h3 class="font-emphasis text-2xl uppercase text-accent-color text-center">{position}</h3>
+				<p class="content text-center">{committee[position].name}</p>
 			</div>
 		))}
 	</div>
