--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,12 +1,12 @@
 ---
-const {title="", subtitle="", center=false} = Astro.props;
+const {title="", subtitle=false, center=false} = Astro.props;
 ---
 
 <h2 class={`title ${center ? 'justify-center': ''}`}>
-	<span class={`text-title-primary-color pr-3 block ${center ? 'text-center' : ''}`}>
+	<span class={`text-title-primary-color ${center && subtitle ? 'ml-3': ''} ${subtitle ? 'mr-3' : ''} block ${center ? 'text-center' : ''}`}>
 		{title}
 	</span>
-	<span class={`text-gray-500 block pr-3 ${center ? 'text-center' : ''}`}>
+	<span class={`text-gray-500 block ${center && subtitle ? 'ml-3': ''} ${subtitle ? 'mr-3' : ''} ${center ? 'text-center' : ''}`}>
 		{subtitle}
 	</span>
 </h2>
