--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
 	    <div class="bg-rainier bg-cover bg-center opacity-40 w-full h-full fixed top-0 left-0"></div>
-	    <div class="bg-gradient-to-b from-main-color-200 to-main-color-600 opacity-60 w-full h-full fixed top-0 left-0"></div>
+	    <div class="bg-main-color w-full h-full fixed top-0 left-0"></div>
     </div>
 
     <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-between">
