--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -88,7 +88,7 @@ import sponsors from '@data/sponsors.json'
 				<!-- GRAND MARSHALL -->
 				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=5000">GRAND MARSHALL</a>
-					<span class="text-gray-500"> $5,000+</span>
+					<span class="text-main-color-50"> $5,000+</span>
 				</h3>
 				<div class="content">
 					<Markdown>
@@ -107,7 +107,7 @@ import sponsors from '@data/sponsors.json'
 				<!-- TOP BRASS -->
 				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=2500">TOP BRASS</a>
-					<span class="text-gray-500"> $2,500</span>
+					<span class="text-main-color-50"> $2,500</span>
 				</h3>
 				<div class="content">
 					<Markdown>				
@@ -125,7 +125,7 @@ import sponsors from '@data/sponsors.json'
 				<!-- HORN STAR -->
 				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=2500">HORN STAR</a>
-					<span class="text-gray-500"> $1,000</span>
+					<span class="text-main-color-50"> $1,000</span>
 				</h3>
 				<div class="content">
 					<Markdown>				
@@ -139,7 +139,7 @@ import sponsors from '@data/sponsors.json'
 				<!-- BAND BOOSTER -->
 				<h3 class="font-emphasis text-accent-color text-2xl sm:text-3xl text-center mt-4 sm:mt-6">
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">HORN STAR</a>
-					<span class="text-gray-500"> $500</span>
+					<span class="text-main-color-50"> $500</span>
 				</h3>
 				<div class="content">
 					<Markdown>				
